[package]
name = "drsat"
description = "SAT solver"
version = "0.1.0"
authors = ["Daniel Schemmel <daniel.schemmel@comsys.rwth-aachen.de>"]
build = "build.rs"
edition = "2021"

[lib]
name = "libdrsat"

[profile.release]
opt-level = 3
lto = true # enabling this significantly increases compile time, but also seems to yield a > 10% speedup

# check .cargo/config, which also contains the following:
# [build]
# rustflags = ["-C", "target-cpu=native"]

[features]
default = []
small_variable_ids = []
aggressive = [ "small_variable_ids" ]

[build-dependencies]
build-info-build = { version = "0.0.27"}

[dependencies]
build-info = { version = "0.0.27"}
bzip2 = { version = "0.4.3" }
clap = { version = "2" }
error-chain = { version = "0.12.4" }
flate2 = { version = "1.0.24" }
xz2 = { version = "0.1.7" }
