[package]
name = "drsat"
description = "SAT solver"
version = "0.1.0"
authors = ["Daniel Schemmel <daniel@schemmel.net>"]

rust-version = "1.56.0"
edition = "2021"

build = "build.rs"
default-run = "drsat"

[lib]
name = "libdrsat"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true # enabling this significantly increases compile time, but also seems to yield a > 10% speedup

# check .cargo/config, which also contains the following:
# [build]
# rustflags = ["-C", "target-cpu=native"]

[features]
default = []
small_variable_ids = []
aggressive = [ "small_variable_ids" ]

[build-dependencies]
build-info-build = { version = "0.0.30"}

[dependencies]
build-info = { version = "0.0.30"}
bzip2 = { version = "0.4.3" }
clap = { version = "4.0.10", features = ["derive"] }
clap_complete = { version = "4.0.2" }
error-chain = { version = "0.12.4" }
flate2 = { version = "1.0.24" }
xz2 = { version = "0.1.7" }
zstd = { version = "0.12" }
