[package]
name = "drsat"
description = "SAT solver"
version = "0.1.0"
authors = ["Daniel Schemmel <daniel@schemmel.net>"]

rust-version = "1.86"
edition = "2024"

build = "build.rs"
default-run = "drsat"

[lib]
name = "libdrsat"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true # enabling this significantly increases compile time, but also seems to yield a > 10% speedup

# check .cargo/config, which also contains the following:
# [build]
# rustflags = ["-C", "target-cpu=native"]

[features]
default = []
small_variable_ids = []
aggressive = [ "small_variable_ids" ]

[build-dependencies]
build-info-build = { version = "0.0.42" }

[dependencies]
build-info = { version = "0.0.42" }
bzip2 = { version = "0.6.0" }
clap = { version = "4.5.48", features = ["derive"] }
clap_complete = { version = "4.5.58" }
derive_more = { version = "2.0.1" }
flate2 = { version = "1.1.4" }
smallvec = { version = "1.15.1", features = ["const_generics", "const_new", "union"] }
static_assertions = { version = "1.1.0" }
thiserror = { version = "2.0.17" }
xz2 = { version = "0.1.7" }
zstd = { version = "0.13.3" }
